--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBnNsTkXaCA-yWNwRQJxNcTWlmgdZ11hmg" />
+            android:value="API_KEY" />
 
         <activity
             android:name=".ui.auth.LoginActivity"
